--- a/app/src/styles/main.scss
+++ b/app/src/styles/main.scss
@@ -86,3 +86,31 @@ img {
     font-size: 16px;
     cursor: pointer;
 }
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th,
+td {
+    text-align: left;
+    padding: 8px;
+}
+
+tr:nth-child(even) {
+    background-color: #f2f2f2
+}
+
+th {
+    background-color: $primary-color;
+    color: white;
+}
+
+.bikes {
+    font-size: 18px;
+    letter-spacing: 1px;
+    line-height: 20px;
+    margin: 50px auto;
+    max-width: 600px;
+}
